--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-*api/controllers/auth-test.js
-*api/routes/users-test.js
+src/api/controllers/auth-test.js
+src/api/routes/users-test.js
 src/app-test.js
 
 
