--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ src/api/controllers/auth-test.js
 src/api/routes/users-test.js
 src/app-test.js
 *.json
-!product-seeder.json
+!products-seeder.json
 
 
 
