--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 src/api/controllers/auth-test.js
 src/api/routes/users-test.js
 src/app-test.js
+
 *.json
 !products-seeder.json
 
-
-
+sarcina5.txt
